[gd_scene load_steps=37 format=2]

[ext_resource path="res://Assets/Living Room.png" type="Texture" id=1]
[ext_resource path="res://Assets/Demo Package v1.2/Gray/scroll4.png" type="Texture" id=2]
[ext_resource path="res://Assets/Demo Package v1.2/Gray/scroll7.png" type="Texture" id=3]
[ext_resource path="res://Assets/SherlockBBC-sprites-2/spritesheets/skull.png" type="Texture" id=4]
[ext_resource path="res://Assets/blood-handprint.png" type="Texture" id=5]
[ext_resource path="res://Assets/Demo Package v1.2/Gray/candle1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Demo Package v1.2/Gray/candle3.png" type="Texture" id=7]
[ext_resource path="res://Scripts/FinalRoom/FinalDoorOne.gd" type="Script" id=8]
[ext_resource path="res://Scripts/FinalRoom/FinalDoorTwo.gd" type="Script" id=9]
[ext_resource path="res://Scripts/FinalRoom/SkullsArea.gd" type="Script" id=10]
[ext_resource path="res://Scripts/FinalRoom/ScrollArea.gd" type="Script" id=11]
[ext_resource path="res://Audio/doorlock.wav" type="AudioStream" id=12]
[ext_resource path="res://Audio/skullsound.wav" type="AudioStream" id=13]
[ext_resource path="res://Audio/ScrollSound.wav" type="AudioStream" id=14]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=3]
0/name = "Living Room.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 48, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Living Room.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 48, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Living Room.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 48, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Living Room.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 48, 48, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 2 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=12]
0/name = "Living Room.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 32, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 4 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Living Room.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 16, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 5 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Living Room.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 6 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Living Room.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 16, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 7 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "Living Room.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 32, 0, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 8 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "Living Room.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 48, 0, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 9 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "Living Room.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 48, 16, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 10 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "Living Room.png 7"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 48, 32, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Living Room.png 8"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 48, 32, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 11 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "Living Room.png 9"
9/texture = ExtResource( 1 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 16, 32, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Living Room.png 10"
10/texture = ExtResource( 1 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 32, 32, 16, 16 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "Living Room.png 11"
11/texture = ExtResource( 1 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 16, 16, 16, 16 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0

[sub_resource type="TileSet" id=13]
0/name = "Living Room.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 48, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Living Room.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 80, 48, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Living Room.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 96, 48, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="TileSet" id=14]
0/name = "Living Room.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Living Room.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 16, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 110, 178 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 110, 0, 110, 178 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 8.06447, 16.2786 )

[sub_resource type="CapsuleShape2D" id=21]

[sub_resource type="CapsuleShape2D" id=22]
height = 2.82593

[node name="FinalMap" type="Node2D"]

[node name="Floor" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 2490367, 0, 0, 2424832, 1, 0, 2424833, 1, 0, 2424834, 1, 0, 2424835, 1, 0, 2424836, 1, 0, 2424837, 1, 0, 2424838, 1, 0, 2424839, 1, 0, 2424840, 1, 0, 2424841, 1, 0, 2424842, 1, 0, 2424843, 1, 0, 2424844, 1, 0, 2424845, 1, 0, 2424846, 1, 0, 2424847, 1, 0, 2424848, 1, 0, 2424849, 1, 0, 2424850, 1, 0, 2424851, 1, 0, 2424852, 1, 0, 2424853, 1, 0, 2424854, 1, 0, 2424855, 1, 0, 2424856, 1, 0, 2424857, 1, 0, 2424858, 1, 0, 2424859, 1, 0, 2424860, 1, 0, 2424861, 1, 0, 2424862, 1, 0, 2424863, 3, 0 )

[node name="Wall" type="TileMap" parent="."]
tile_set = SubResource( 12 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 1441791, 2, 0, 1376256, 3, 0, 1376257, 3, 0, 1376258, 3, 0, 1376259, 3, 0, 1376260, 3, 0, 1376261, 3, 0, 1376262, 3, 0, 1376263, 3, 0, 1376264, 3, 0, 1376265, 3, 0, 1376266, 3, 0, 1376267, 3, 0, 1376268, 3, 0, 1376269, 3, 0, 1376270, 3, 0, 1376271, 3, 0, 1376272, 3, 0, 1376273, 3, 0, 1376274, 3, 0, 1376275, 3, 0, 1376276, 3, 0, 1376277, 3, 0, 1376278, 3, 0, 1376279, 3, 0, 1376280, 3, 0, 1376281, 3, 0, 1376282, 3, 0, 1376283, 3, 0, 1376284, 3, 0, 1376285, 3, 0, 1376286, 3, 0, 1376287, 5, 0, 1507327, 1, 0, 1441792, 11, 0, 1441793, 11, 0, 1441794, 11, 0, 1441795, 11, 0, 1441796, 11, 0, 1441797, 11, 0, 1441798, 11, 0, 1441799, 11, 0, 1441800, 11, 0, 1441801, 11, 0, 1441802, 11, 0, 1441803, 11, 0, 1441804, 11, 0, 1441805, 11, 0, 1441806, 11, 0, 1441807, 11, 0, 1441808, 11, 0, 1441809, 11, 0, 1441810, 11, 0, 1441811, 11, 0, 1441812, 11, 0, 1441813, 11, 0, 1441814, 11, 0, 1441815, 11, 0, 1441816, 11, 0, 1441817, 11, 0, 1441818, 11, 0, 1441819, 11, 0, 1441820, 11, 0, 1441821, 11, 0, 1441822, 11, 0, 1441823, 6, 0, 1572863, 1, 0, 1507328, 11, 0, 1507329, 11, 0, 1507330, 11, 0, 1507331, 11, 0, 1507332, 11, 0, 1507333, 11, 0, 1507334, 11, 0, 1507335, 11, 0, 1507336, 11, 0, 1507337, 11, 0, 1507338, 11, 0, 1507339, 11, 0, 1507340, 11, 0, 1507341, 11, 0, 1507342, 11, 0, 1507343, 11, 0, 1507344, 11, 0, 1507345, 11, 0, 1507346, 11, 0, 1507347, 11, 0, 1507348, 11, 0, 1507349, 11, 0, 1507350, 11, 0, 1507351, 11, 0, 1507352, 11, 0, 1507353, 11, 0, 1507354, 11, 0, 1507355, 11, 0, 1507356, 11, 0, 1507357, 11, 0, 1507358, 11, 0, 1507359, 6, 0, 1638399, 1, 0, 1572864, 11, 0, 1572865, 11, 0, 1572866, 11, 0, 1572867, 11, 0, 1572868, 11, 0, 1572869, 11, 0, 1572870, 11, 0, 1572871, 11, 0, 1572872, 11, 0, 1572873, 11, 0, 1572874, 11, 0, 1572875, 11, 0, 1572876, 11, 0, 1572877, 11, 0, 1572878, 11, 0, 1572879, 11, 0, 1572880, 11, 0, 1572881, 11, 0, 1572882, 11, 0, 1572883, 11, 0, 1572884, 11, 0, 1572885, 11, 0, 1572886, 11, 0, 1572887, 11, 0, 1572888, 11, 0, 1572889, 11, 0, 1572890, 11, 0, 1572891, 11, 0, 1572892, 11, 0, 1572893, 11, 0, 1572894, 11, 0, 1572895, 6, 0, 1703935, 1, 0, 1638400, 11, 0, 1638401, 11, 0, 1638402, 11, 0, 1638403, 11, 0, 1638404, 11, 0, 1638405, 11, 0, 1638406, 11, 0, 1638407, 11, 0, 1638408, 11, 0, 1638409, 11, 0, 1638410, 11, 0, 1638411, 11, 0, 1638412, 11, 0, 1638413, 11, 0, 1638414, 11, 0, 1638415, 11, 0, 1638416, 11, 0, 1638417, 11, 0, 1638418, 11, 0, 1638419, 11, 0, 1638420, 11, 0, 1638421, 11, 0, 1638422, 11, 0, 1638423, 11, 0, 1638424, 11, 0, 1638425, 11, 0, 1638426, 11, 0, 1638427, 11, 0, 1638428, 11, 0, 1638429, 11, 0, 1638430, 11, 0, 1638431, 6, 0, 1769471, 1, 0, 1703936, 11, 0, 1703937, 11, 0, 1703938, 11, 0, 1703939, 11, 0, 1703940, 11, 0, 1703941, 11, 0, 1703942, 11, 0, 1703943, 11, 0, 1703944, 11, 0, 1703945, 11, 0, 1703946, 11, 0, 1703947, 11, 0, 1703948, 11, 0, 1703949, 11, 0, 1703950, 11, 0, 1703951, 11, 0, 1703952, 11, 0, 1703953, 11, 0, 1703954, 11, 0, 1703955, 11, 0, 1703956, 11, 0, 1703957, 11, 0, 1703958, 11, 0, 1703959, 11, 0, 1703960, 11, 0, 1703961, 11, 0, 1703962, 11, 0, 1703963, 11, 0, 1703964, 11, 0, 1703965, 11, 0, 1703966, 11, 0, 1703967, 6, 0, 1835007, 1, 0, 1769472, 11, 0, 1769473, 11, 0, 1769474, 11, 0, 1769475, 11, 0, 1769476, 11, 0, 1769477, 11, 0, 1769478, 11, 0, 1769479, 11, 0, 1769480, 11, 0, 1769481, 11, 0, 1769482, 11, 0, 1769483, 11, 0, 1769484, 11, 0, 1769485, 11, 0, 1769486, 11, 0, 1769487, 11, 0, 1769488, 11, 0, 1769489, 11, 0, 1769490, 11, 0, 1769491, 11, 0, 1769492, 11, 0, 1769493, 11, 0, 1769494, 11, 0, 1769495, 11, 0, 1769496, 11, 0, 1769497, 11, 0, 1769498, 11, 0, 1769499, 11, 0, 1769500, 11, 0, 1769501, 11, 0, 1769502, 11, 0, 1769503, 6, 0, 1900543, 1, 0, 1835008, 11, 0, 1835009, 11, 0, 1835010, 11, 0, 1835011, 11, 0, 1835012, 11, 0, 1835013, 11, 0, 1835014, 11, 0, 1835015, 11, 0, 1835016, 11, 0, 1835017, 11, 0, 1835018, 11, 0, 1835019, 11, 0, 1835020, 11, 0, 1835021, 11, 0, 1835022, 11, 0, 1835023, 11, 0, 1835024, 11, 0, 1835025, 11, 0, 1835026, 11, 0, 1835027, 11, 0, 1835028, 11, 0, 1835029, 11, 0, 1835030, 11, 0, 1835031, 11, 0, 1835032, 11, 0, 1835033, 11, 0, 1835034, 11, 0, 1835035, 11, 0, 1835036, 11, 0, 1835037, 11, 0, 1835038, 11, 0, 1835039, 6, 0, 1966079, 1, 0, 1900544, 11, 0, 1900545, 11, 0, 1900546, 11, 0, 1900547, 11, 0, 1900548, 11, 0, 1900549, 11, 0, 1900550, 11, 0, 1900551, 11, 0, 1900552, 11, 0, 1900553, 11, 0, 1900554, 11, 0, 1900555, 11, 0, 1900556, 11, 0, 1900557, 11, 0, 1900558, 11, 0, 1900559, 11, 0, 1900560, 11, 0, 1900561, 11, 0, 1900562, 11, 0, 1900563, 11, 0, 1900564, 11, 0, 1900565, 11, 0, 1900566, 11, 0, 1900567, 11, 0, 1900568, 11, 0, 1900569, 11, 0, 1900570, 11, 0, 1900571, 11, 0, 1900572, 11, 0, 1900573, 11, 0, 1900574, 11, 0, 1900575, 6, 0, 2031615, 1, 0, 1966080, 11, 0, 1966081, 11, 0, 1966082, 11, 0, 1966083, 11, 0, 1966084, 11, 0, 1966085, 11, 0, 1966086, 11, 0, 1966087, 11, 0, 1966088, 11, 0, 1966089, 11, 0, 1966090, 11, 0, 1966091, 11, 0, 1966092, 11, 0, 1966093, 11, 0, 1966094, 11, 0, 1966095, 11, 0, 1966096, 11, 0, 1966097, 11, 0, 1966098, 11, 0, 1966099, 11, 0, 1966100, 11, 0, 1966101, 11, 0, 1966102, 11, 0, 1966103, 11, 0, 1966104, 11, 0, 1966105, 11, 0, 1966106, 11, 0, 1966107, 11, 0, 1966108, 11, 0, 1966109, 11, 0, 1966110, 11, 0, 1966111, 6, 0, 2097151, 1, 0, 2031616, 11, 0, 2031617, 11, 0, 2031618, 11, 0, 2031619, 11, 0, 2031620, 11, 0, 2031621, 11, 0, 2031622, 11, 0, 2031623, 11, 0, 2031624, 11, 0, 2031625, 11, 0, 2031626, 11, 0, 2031627, 11, 0, 2031628, 11, 0, 2031629, 11, 0, 2031630, 11, 0, 2031631, 11, 0, 2031632, 11, 0, 2031633, 11, 0, 2031634, 11, 0, 2031635, 11, 0, 2031636, 11, 0, 2031637, 11, 0, 2031638, 11, 0, 2031639, 11, 0, 2031640, 11, 0, 2031641, 11, 0, 2031642, 11, 0, 2031643, 11, 0, 2031644, 11, 0, 2031645, 11, 0, 2031646, 11, 0, 2031647, 6, 0, 2162687, 1, 0, 2097152, 11, 0, 2097153, 11, 0, 2097154, 11, 0, 2097155, 11, 0, 2097156, 11, 0, 2097157, 11, 0, 2097158, 11, 0, 2097159, 11, 0, 2097160, 11, 0, 2097161, 11, 0, 2097162, 11, 0, 2097163, 11, 0, 2097164, 11, 0, 2097165, 11, 0, 2097166, 11, 0, 2097167, 11, 0, 2097168, 11, 0, 2097169, 11, 0, 2097170, 11, 0, 2097171, 11, 0, 2097172, 11, 0, 2097173, 11, 0, 2097174, 11, 0, 2097175, 11, 0, 2097176, 11, 0, 2097177, 11, 0, 2097178, 11, 0, 2097179, 11, 0, 2097180, 11, 0, 2097181, 11, 0, 2097182, 11, 0, 2097183, 6, 0, 2228223, 1, 0, 2162688, 11, 0, 2162689, 11, 0, 2162690, 11, 0, 2162691, 11, 0, 2162692, 11, 0, 2162693, 11, 0, 2162694, 11, 0, 2162695, 11, 0, 2162696, 11, 0, 2162697, 11, 0, 2162698, 11, 0, 2162699, 11, 0, 2162700, 11, 0, 2162701, 11, 0, 2162702, 11, 0, 2162703, 11, 0, 2162704, 11, 0, 2162705, 11, 0, 2162706, 11, 0, 2162707, 11, 0, 2162708, 11, 0, 2162709, 11, 0, 2162710, 11, 0, 2162711, 11, 0, 2162712, 11, 0, 2162713, 11, 0, 2162714, 11, 0, 2162715, 11, 0, 2162716, 11, 0, 2162717, 11, 0, 2162718, 11, 0, 2162719, 6, 0, 2293759, 1, 0, 2228224, 11, 0, 2228225, 11, 0, 2228226, 11, 0, 2228227, 11, 0, 2228228, 11, 0, 2228229, 11, 0, 2228230, 11, 0, 2228231, 11, 0, 2228232, 11, 0, 2228233, 11, 0, 2228234, 11, 0, 2228235, 11, 0, 2228236, 11, 0, 2228237, 11, 0, 2228238, 11, 0, 2228239, 11, 0, 2228240, 11, 0, 2228241, 11, 0, 2228242, 11, 0, 2228243, 11, 0, 2228244, 11, 0, 2228245, 11, 0, 2228246, 11, 0, 2228247, 11, 0, 2228248, 11, 0, 2228249, 11, 0, 2228250, 11, 0, 2228251, 11, 0, 2228252, 11, 0, 2228253, 11, 0, 2228254, 11, 0, 2228255, 6, 0, 2359295, 1, 0, 2293760, 11, 0, 2293761, 11, 0, 2293762, 11, 0, 2293763, 11, 0, 2293764, 11, 0, 2293765, 11, 0, 2293766, 11, 0, 2293767, 11, 0, 2293768, 11, 0, 2293769, 11, 0, 2293770, 11, 0, 2293771, 11, 0, 2293772, 11, 0, 2293773, 11, 0, 2293774, 11, 0, 2293775, 11, 0, 2293776, 11, 0, 2293777, 11, 0, 2293778, 11, 0, 2293779, 11, 0, 2293780, 11, 0, 2293781, 11, 0, 2293782, 11, 0, 2293783, 11, 0, 2293784, 11, 0, 2293785, 11, 0, 2293786, 11, 0, 2293787, 11, 0, 2293788, 11, 0, 2293789, 11, 0, 2293790, 11, 0, 2293791, 6, 0, 2424831, 0, 0, 2359296, 9, 0, 2359297, 9, 0, 2359298, 9, 0, 2359299, 9, 0, 2359300, 9, 0, 2359301, 9, 0, 2359302, 9, 0, 2359303, 9, 0, 2359304, 9, 0, 2359305, 9, 0, 2359306, 9, 0, 2359307, 9, 0, 2359308, 9, 0, 2359309, 9, 0, 2359310, 9, 0, 2359311, 9, 0, 2359312, 9, 0, 2359313, 9, 0, 2359314, 9, 0, 2359315, 9, 0, 2359316, 9, 0, 2359317, 9, 0, 2359318, 9, 0, 2359319, 9, 0, 2359320, 9, 0, 2359321, 9, 0, 2359322, 9, 0, 2359323, 9, 0, 2359324, 9, 0, 2359325, 9, 0, 2359326, 9, 0, 2359327, 8, 0 )

[node name="Table" type="TileMap" parent="."]
tile_set = SubResource( 13 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 2359312, 536870914, 0, 2359313, 536870913, 0, 2359314, 536870912, 0 )

[node name="Door" type="TileMap" parent="."]
tile_set = SubResource( 14 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 2293765, 0, 0, 2293789, 536870912, 0, 2359301, 1, 0, 2359325, 536870913, 0 )

[node name="Scroll" type="AnimatedSprite" parent="."]
position = Vector2( 414.473, 579.833 )
scale = Vector2( 0.0550197, 0.0622745 )
frames = SubResource( 15 )
frame = 1
playing = true

[node name="Skull" type="AnimatedSprite" parent="."]
position = Vector2( 320, 569.939 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 18 )
playing = true

[node name="SecondSkull" type="AnimatedSprite" parent="."]
position = Vector2( 340, 569.939 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 18 )
frame = 1
playing = true

[node name="blood-handprint" type="Sprite" parent="."]
position = Vector2( 318, 587.272 )
scale = Vector2( 0.0286585, 0.0264835 )
texture = ExtResource( 5 )

[node name="blood-handprint2" type="Sprite" parent="."]
position = Vector2( 325, 587.94 )
scale = Vector2( 0.0286585, 0.0264835 )
texture = ExtResource( 5 )

[node name="blood-handprint3" type="Sprite" parent="."]
position = Vector2( 332, 587.94 )
scale = Vector2( 0.0286585, 0.0264835 )
texture = ExtResource( 5 )

[node name="blood-handprint4" type="Sprite" parent="."]
position = Vector2( 340, 587.495 )
scale = Vector2( 0.0286585, 0.0264835 )
texture = ExtResource( 5 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
position = Vector2( 278.838, 569.716 )
scale = Vector2( 0.05, 0.05 )
frames = SubResource( 19 )

[node name="FinalDoorOne" type="Area2D" parent="." groups=[
"doors",
]]
position = Vector2( 88.967, 567.733 )
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinalDoorOne"]
position = Vector2( -1.12373, 8.33435 )
shape = SubResource( 20 )

[node name="ExitPos" type="Position2D" parent="FinalDoorOne"]
position = Vector2( -1000, 8.8 )

[node name="DoorLock" type="AudioStreamPlayer" parent="FinalDoorOne"]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="FinalDoorTwo" type="Area2D" parent="." groups=[
"doors",
]]
position = Vector2( 472.069, 575.711 )
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinalDoorTwo"]
shape = SubResource( 20 )

[node name="DoorLock" type="AudioStreamPlayer" parent="FinalDoorTwo"]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="SkullsArea" type="Area2D" parent="."]
position = Vector2( 328.963, 583.352 )
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SkullsArea"]
rotation = 1.5708
shape = SubResource( 21 )

[node name="SkullSound" type="AudioStreamPlayer" parent="SkullsArea"]
stream = ExtResource( 13 )
volume_db = -10.0

[node name="ScrollArea" type="Area2D" parent="."]
position = Vector2( 414.597, 573.464 )
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScrollArea"]
position = Vector2( -0.332428, 4.52472 )
shape = SubResource( 22 )

[node name="ScrollSound" type="AudioStreamPlayer" parent="ScrollArea"]
stream = ExtResource( 14 )
volume_db = -10.0

[connection signal="body_entered" from="FinalDoorOne" to="FinalDoorOne" method="_on_FinalDoorOne_body_entered"]
[connection signal="body_exited" from="FinalDoorOne" to="FinalDoorOne" method="_on_FinalDoorOne_body_exited"]
[connection signal="body_entered" from="FinalDoorTwo" to="FinalDoorTwo" method="_on_FinalDoorTwo_body_entered"]
[connection signal="body_exited" from="FinalDoorTwo" to="FinalDoorTwo" method="_on_FinalDoorTwo_body_exited"]
[connection signal="body_entered" from="SkullsArea" to="SkullsArea" method="_on_SkullsArea_body_entered"]
[connection signal="body_exited" from="SkullsArea" to="SkullsArea" method="_on_SkullsArea_body_exited"]
[connection signal="body_entered" from="ScrollArea" to="ScrollArea" method="_on_ScrollArea_body_entered"]
[connection signal="body_exited" from="ScrollArea" to="ScrollArea" method="_on_ScrollArea_body_exited"]
